# zap

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  default.nix  flake.nix
.github/workflows/: rust.yml
Formula/: zap.rb
plugins/: Cargo.toml
plugins/src/: lib.rs
scripts/: git-tag.sh  list-sha.sh
src/: args.rs  errors.rs  file_time_util.rs  fileaction.rs  lib.rs  main.rs  parsedate.rs  plugins.rs
tests/: atomic_operations_test.rs  create_with_templates.rs  flag_behavior_test.rs
