[package]
name = "zap"
version = "0.1.2"
edition = "2024"

[workspace]
members = [".", "plugins"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
tera = { version = "1.20.0", features = ["builtins", "date-locale"] }
filetime = "0.2"
dirs = "6.0"
toml = "0.8.19"                                                       # unused, for now
thiserror = "2.0.12"
dirs-next = "2.0.0"                                                   # for config file location
libloading = "0.8.8"
miette = { version = "7.6.0", features = ["fancy"] }
chrono = "0.4.41"
anyhow = "1.0.98"
lazy-regex = "3.4.1"
